# forkstack

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  Makefile  README.md  install.sh  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: architecture.md  choosing-a-stack.md  cicd.md  databases.md  getting-started.md  index.md  storage.md
examples/: README.md  simple-app.py
forkstack/: Cargo.toml
forkstack/src/: config.rs  lib.rs  storage.rs  turso.rs
stacks/python-turso-tigris-doppler/: .gitignore  Makefile  README.md  env_utils.py  envs.py  example_app.py  test_env_utils.py
templates/: CLAUDE.md  Makefile.envs  env_utils.py  envs.py
templates/base/python/: README.md  env_utils.py
templates/implementations/databases/turso/: README.md  python.py
templates/implementations/secrets/doppler/: README.md  python.py
templates/implementations/storage/tigris/: README.md  python.py
