[project]
name = "forkstack"
version = "0.1.0"
description = "forkstack CLI - instant, isolated development environments using zero-copy database and storage forks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Russell Romney", email = "russellromney@gmail.com" }]
keywords = ["cli", "database", "development", "devtools", "turso"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://forkstack.xyz"
Repository = "https://github.com/russellromney/forkstack"
Documentation = "https://forkstack.xyz"

[project.optional-dependencies]
docs = ["mkdocs-material>=9.7.0"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Build the CLI binary
bindings = "bin"
# Point to the CLI crate
manifest-path = "cli/Cargo.toml"
# Strip debug symbols for smaller binary
strip = true
