[package]
name = "forks-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "forkstack CLI - instant, isolated development environments"
readme = "../README.md"

[[bin]]
name = "forks"
path = "src/main.rs"

[dependencies]
forkstack = { path = "../forkstack" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
