[package]
name = "forkstack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "forkstack - instant, isolated development environments using zero-copy database and storage forks"

[lib]
name = "forkstack"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
toml.workspace = true
aws-sdk-s3.workspace = true
aws-config.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
